<?xml version="1.0"?>
<package format="2">
  <name>gcode_core</name>
  <version>0.0.0</version>
  <description>The gcode_core package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
