<?xml version="1.0"?>
<package format="2">
  <name>gcode_core</name>
  <version>0.1.0</version>
  <description>The gcode_core package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>MIT</license>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>gcode_msgs</depend>
</package>
