<?xml version="1.0"?>
<package format="2">
  <name>gcode_rviz</name>
  <version>0.0.0</version>
  <description>The gcode_rviz package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogasts</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>visualization_msgs</depend>
  <depend>gcode_core</depend>
  <depend>rviz_visual_tools</depend>

  <export>
    <rviz plugin="${prefix}/gcode_rviz_test_plugin_description.xml"/>
  </export>
</package>
