<?xml version="1.0"?>
<package format="2">
  <name>gcode_rviz</name>
  <version>0.0.1</version>
  <description>The gcode_rviz package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogasts</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>gcode_core</depend>
  <depend>pluginlib</depend>

  <export>
    <rviz plugin="${prefix}/gcode_rviz_plugin_description.xml"/>
  </export>
</package>
